solved the mystery of extra space on right margin

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body{
 } */
 .heroImage {
     margin:0 auto;
-    width: 375px;
+    width: 350px;
     /* max-width: 157.53846%; */
     overflow: hidden;
 }
@@ -158,7 +158,7 @@ html{
     padding-top: 25px;
     border-bottom-left-radius: 50px;
     z-index: -2;
-    width: 57.692307%;
+    width: 50%;
     height: 65%;
     position: absolute;
     top: 0;
